tests/toylang/neg/001533_mutation.toylang
program a = { var sleep : bool; } .
